--- a/JPS_VIRTUALSENSOR/ShipInputAgent/pom.xml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
-        <version>1.0.0</version>
+        <version>2.0.0</version>
 	</parent>
     
     <!-- Profiles are used to switch between building for development and production 
@@ -82,7 +82,7 @@
         <dependency>
 			<groupId>uk.ac.cam.cares.jps</groupId>
 			<artifactId>jps-base-lib</artifactId>
-			<version>1.11.8</version>
+			<version>1.15.0-dev-timeseries-ontop-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
