--- a/JPS_VIRTUALSENSOR/ShipInputAgent/.vscode/settings.json
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
 	"debug.port": 15008,
-	"java.configuration.updateBuildConfiguration": "interactive"
+	"java.configuration.updateBuildConfiguration": "automatic"
 }
