--- a/JPS_VIRTUALSENSOR/ShipInputAgent/Dockerfile
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/Dockerfile
@@ -32,7 +32,6 @@ WORKDIR /root/code
 
 COPY pom.xml ./
 COPY src ./src/
-COPY WEB-INF ./WEB-INF/
 
 RUN mvn package -DskipTests -U
 
@@ -40,12 +39,13 @@ RUN mvn package -DskipTests -U
 
 # Third stage: copy the downloaded dependency into a new image and build into an app
 #==================================================================================================
-FROM tomcat:9 as agent
+FROM adoptopenjdk/openjdk11:jre-11.0.13_8 as app
 
 WORKDIR /app
 
-# Copy the compiled jar from the builder
-COPY --from=builder /root/code/output/* $CATALINA_HOME/webapps/
+# copy compiled jar from previous step
+COPY --from=builder /root/code/target/*.jar /app
+COPY --from=builder /root/code/target/lib /app/lib
 COPY ./docker/entrypoint.sh entrypoint.sh
 
 ENTRYPOINT ["./entrypoint.sh"]
