Revert "dev-virtual-sensor-update: rename ShipInputAgent into ShipDataUploader, switch from war to jar"
This reverts commit 113e20290f9992c12af03411c50e662f18bbcdf3.

--- a/JPS_VIRTUALSENSOR/ShipInputAgent/.vscode/settings.json
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
 	"debug.port": 15008,
-	"java.configuration.updateBuildConfiguration": "automatic"
+	"java.configuration.updateBuildConfiguration": "interactive"
 }
