--- a/Agents/MetOfficeAgent/docker-compose.yml
+++ b/Agents/MetOfficeAgent/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   metofficeagent:
-    image: ghcr.io/metofficeagent:1.0.0-SNAPSHOT
+    image: ghcr.io/cambridge-cares/metofficeagent:1.0.0-SNAPSHOT
     deploy:
       mode: replicated
       replicas: 1
