--- a/Agents/MetOfficeAgent/.vscode/tasks.json
+++ b/Agents/MetOfficeAgent/.vscode/tasks.json
@@ -15,6 +15,11 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "options": {
+                "shell": {
+                    "executable": "bash"
+                }
             }
         },
         {
