--- a/Agents/MetOfficeAgent/docker-compose-stack.yml
+++ b/Agents/MetOfficeAgent/docker-compose-stack.yml
@@ -23,11 +23,17 @@ volumes:
       - com.docker.stack.namespace:${STACK_NAME}
 
 configs:
-  postgis:
-    name: ${STACK_NAME}_postgis
-    external: true
   blazegraph:
     name: ${STACK_NAME}_blazegraph
+    external: true
+  geoserver:
+    name: ${STACK_NAME}_geoserver
+    external: true
+  ontop:
+    name: ${STACK_NAME}_ontop
+    external: true
+  postgis:
+    name: ${STACK_NAME}_postgis
     external: true
 
 networks:
@@ -37,6 +43,9 @@ networks:
     external: true
 
 secrets:
+  geoserver_password:
+    name: ${STACK_NAME}_geoserver_password
+    external: true
   postgis_password:
     name: ${STACK_NAME}_postgis_password
     external: true
