dev-1285-upgrade-from-java-8: Updated FileEditor to use java 11, updated unit test such that the file contents are compared and EOL is ignored

--- a/JPS_FILE_EDITOR/pom.xml
+++ b/JPS_FILE_EDITOR/pom.xml
@@ -32,6 +32,9 @@
 			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
-		
 	</dependencies>
+	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
 </project>
