--- a/Agents/MetOfficeAgent/.vscode/launch.json
+++ b/Agents/MetOfficeAgent/.vscode/launch.json
@@ -34,6 +34,20 @@
         },
         {
             "type": "python",
+            "name": "Update JPSRM and Build and Debug",
+            "request": "attach",
+            "host": "localhost",
+            "port": "${input:debug.port}",
+            "preLaunchTask": "update-compose-build-deploy",
+            "pathMappings": [
+                {
+                    "localRoot": "${workspaceFolder}/metoffice",
+                    "remoteRoot": "/app/metoffice"
+                }
+            ]
+        },
+        {
+            "type": "python",
             "name": "Reattach and Debug",
             "request": "attach",
             "host": "localhost",
