dev-virtual-sensor-update: ShipInputAgent now creates a layer each time it adds data

--- a/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose-stack.yml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose-stack.yml
@@ -27,8 +27,8 @@ configs:
   blazegraph:
     name: ${STACK_NAME}_blazegraph
     external: true
-  ontop:
-    name: ${STACK_NAME}_ontop
+  geoserver:
+    name: ${STACK_NAME}_geoserver
     external: true
 
 networks:
@@ -40,4 +40,7 @@ networks:
 secrets:
   postgis_password:
     name: ${STACK_NAME}_postgis_password
+    external: true
+  geoserver_password:
+    name: ${STACK_NAME}_geoserver_password
     external: true
