--- a/JPS_VIRTUALSENSOR/ShipInputAgent/pom.xml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/pom.xml
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>com.cmclinnovations</groupId>
             <artifactId>stack-clients</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.0-318-add-setter-in-geoserversettings-SNAPSHOT</version>
         </dependency>
 	</dependencies>	
 </project>
