dev-virtual-sensor-update: added required files to spin up EpisodeAgent in the stack

--- a/JPS_VIRTUALSENSOR/Episode/Dockerfile
+++ b/JPS_VIRTUALSENSOR/Episode/Dockerfile
@@ -50,4 +50,4 @@ COPY --from=builder /root/code/output/* $CATALINA_HOME/webapps/
 COPY ./docker/entrypoint.sh entrypoint.sh
 
 # Run the state updater code
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["./entrypoint.sh"]
