--- a/JPS_VIRTUALSENSOR/Episode/pom.xml
+++ b/JPS_VIRTUALSENSOR/Episode/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>uk.ac.cam.cares.jps</groupId>
         <artifactId>jps-parent-pom</artifactId>
-        <version>1.0.0</version>
+        <version>2.0.0</version>
 	</parent>
     
     <!-- Profiles are used to switch between building for development and production 
@@ -43,8 +43,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -60,7 +60,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 				<webResources>
-					<resource>
+                    <resource>
 						<directory>workingdir</directory>
 						<targetPath>workingdir</targetPath>
 					</resource>
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cares.jps</groupId>
 			<artifactId>jps-base-lib</artifactId>
-			<version>1.11.2</version>
+			<version>1.15.0-dev-timeseries-ontop-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Testing, versions pulled from parent -->
