--- a/JPS_FILE_EDITOR/pom.xml
+++ b/JPS_FILE_EDITOR/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps</groupId>
   <artifactId>JPS_FILE_EDITOR</artifactId>
-  <version>0.0.1</version>
+	<version>0.1.0-java11-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cares.jps</groupId>
 			<artifactId>jps-base-lib</artifactId>
-			<version>1.3.0</version>
+			<version>1.16.0-java11-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
