--- a/Agents/KineticsAgent/pom.xml
+++ b/Agents/KineticsAgent/pom.xml
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cares.jps</groupId>
 			<artifactId>jps-base-lib</artifactId>
-			<version>1.15.0</version>
+			<version>${jps.base.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -113,29 +113,12 @@
 		</dependency>
 
         <!-- RDF4J support -->
-        <dependency>
-            <groupId>org.eclipse.rdf4j</groupId>
-            <artifactId>rdf4j-runtime</artifactId>
-            <version>2.4.2</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-model</artifactId>
-            <version>2.4.2</version>
+            
         </dependency>
-
-        <!-- JSON Support -->
-        <dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20220320</version>
-		</dependency>
 
         <!-- SSH Connectivity -->
 		<dependency>
