--- a/Deploy/stacks/cares-agent/docker-compose.deploy.yml
+++ b/Deploy/stacks/cares-agent/docker-compose.deploy.yml
@@ -16,10 +16,11 @@ services:
 
   # Access Agent
   access-agent:
-    image: ghcr.io/cambridge-cares/access-agent:1.2.1
+    image: ghcr.io/cambridge-cares/access-agent:1.4.0
     container_name: "access-agent${CONTAINER_NAME_SUFFIX}"
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+      STOREROUTER_ENDPOINT: "http://www.theworldavatar.com/blazegraph/namespace/ontokgrouter/sparql"
     pull_policy: if_not_present
     restart: unless-stopped
     
