dev-MetOfficeAgent-withinStack: Added initial ontop mapping

--- a/Agents/MetOfficeAgent/Dockerfile
+++ b/Agents/MetOfficeAgent/Dockerfile
@@ -25,6 +25,7 @@ COPY ./tmp_stack ./tmp_stack
 WORKDIR /app
 COPY ./README.md .
 COPY ./setup.py .
+COPY ./resources/ontop.obda ./resources/ontop.obda
 
 # Install Python package and the required libraries
 RUN python -m pip install --upgrade pip
