--- a/JPS_VIRTUALSENSOR/Ship/pom.xml
+++ b/JPS_VIRTUALSENSOR/Ship/pom.xml
@@ -5,7 +5,7 @@
     
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cmclinnovations</groupId>
-    <artifactId>ShipInputAgent</artifactId>
+    <artifactId>Ship</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>com.cmclinnovations</groupId>
             <artifactId>stack-clients</artifactId>
-            <version>1.3.0-318-add-setter-in-geoserversettings-SNAPSHOT</version>
+            <version>1.5.0</version>
         </dependency>
 	</dependencies>	
 </project>
