--- a/JPS_VIRTUALSENSOR/Ship/docker-compose-debug.yml
+++ b/JPS_VIRTUALSENSOR/Ship/docker-compose-debug.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  shipinputagent:
+  ship-input-agent:
     environment:
       - JPDA_ADDRESS=0.0.0.0:5005
       - JPDA_TRANSPORT=dt_socket
