--- a/JPS_VIRTUALSENSOR/Ship/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/Ship/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.8"
 
 services:
-  shipinputagent:
-    image: docker.cmclinnovations.com/shipinputagent:1.0.0-SNAPSHOT
+  ship-input-agent:
+    image: docker.cmclinnovations.com/ship-input-agent:1.0.0-SNAPSHOT
     deploy:
       mode: replicated
       replicas: 1
@@ -15,9 +15,9 @@ services:
       - LAST_READ_FILE=/misc/last_read_file
       - TIME_OFFSET_FILE=/misc/time_offset_file
       - GEOSERVER_WORKSPACE=dispersion
-      - EMISSIONS_AGENT_URL=http://localhost:8080/Ship/EmissionsAgent
+      - EMISSIONS_AGENT_URL=http://host.docker.internal:8083/EmissionsAgent/
       - EMISSIONS_AGENT_IRI=http://theworldavatar.com/dispersion/EmissionsAgent
-      - PYTHON_SERVICE_URL=http://host.docker.internal:5000
+      - PYTHON_SERVICE_URL=http://${STACK_NAME}_python-service:5000
     configs:
       - postgis
       - blazegraph
