dev-MetOfficeAgent-withinStack: Implemented core functions for all stack clients

--- a/Agents/MetOfficeAgent/.vscode/tasks.json
+++ b/Agents/MetOfficeAgent/.vscode/tasks.json
@@ -90,7 +90,7 @@
             "id": "stackName",
             "type": "promptString",
             "description": "Name your stack.",
-            "default": "TEST-STACK"
+            "default": "KINGS-LYNN"
         },
         {
             "id": "debug.port",
