--- a/Agents/KineticsAgent/pom.xml
+++ b/Agents/KineticsAgent/pom.xml
@@ -22,7 +22,7 @@
 	<properties>
 		<spring-version>5.3.22</spring-version>
         <spring-security-version>5.7.3</spring-security-version>
-        <jps.base.version>1.15.1-fix-kinetics-agent-SNAPSHOT</jps.base.version>
+        <jps.base.version>1.15.0</jps.base.version>
 	</properties>
 
     <!-- Profiles are used to switch between building for development and production 
