--- a/Agents/WeatherAgent/docker-compose.yml.template
+++ b/Agents/WeatherAgent/docker-compose.yml.template
@@ -10,7 +10,7 @@ services:
         condition: none
     environment:
       - STACK_NAME=${STACK_NAME}
-      - API_KEY=
+      - API_KEY=21db8f6413957d7fdb6cfd98e05e03eb
       - LAYERNAME=weatherstations # also name of the table in PostGIS
       - DATABASE=postgres # currently ontop reads from the default database
       - GEOSERVER_WORKSPACE=weatherstations
