dev-pubchem-agent: the kgoperations module was tested for sample IRI. The next is implementign the query with InChI

--- a/Agents/PubChemAgent/.gitignore
+++ b/Agents/PubChemAgent/.gitignore
@@ -1,1 +1,17 @@
-*.*csv
+__pycache__/
+build/
+dist/
+*~*
+.vscode/
+*venv/
+.mypy_cache/
+coverage.xml
+.coverage
+*.gv
+*.png
+resources/
+.pytest_cache
+assets
+
+## User defined
+*.egg-info
