--- a/Agents/MoDSSimpleAgent/mods-simple-agent/pom.xml
+++ b/Agents/MoDSSimpleAgent/mods-simple-agent/pom.xml
@@ -54,6 +54,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.cmclinnovations.mods</groupId>
 			<artifactId>MoDS_API</artifactId>
 			<version>0.15.0</version>
