--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -1,7 +1,7 @@
 ###--- Properties for MetOffice Agent agent ---###
 
 # MetOffice DataPoint API key
-api.key = key
+api.key = 781fcade-8eaa-44c7-84e8-014f92857aa1
 
 ###--- Properties for JAVA TimeSeriesClient ---###
 # Need to be changed based on the setup of the system:
