dev-virtual-sensor-update: ship input agent to add ontop mapping file for ship locations

--- a/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose-stack.yml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose-stack.yml
@@ -30,6 +30,9 @@ configs:
   geoserver:
     name: ${STACK_NAME}_geoserver
     external: true
+  ontop:
+    name: ${STACK_NAME}_ontop
+    external: true
 
 networks:
   stack:
