--- a/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - postgis
       - blazegraph
       - geoserver
+      - ontop
     secrets:
       - postgis_password
       - geoserver_password
