--- a/MARIE_AND_BERT/DATA/EntityLinking/conf/base500.yaml
+++ b/MARIE_AND_BERT/DATA/EntityLinking/conf/base500.yaml
@@ -3,7 +3,7 @@ path_to_model: pytorch_model.bin
 #data_path: data/pubchem/test.jsonl #path for data to be inferred
 output_path: models
 cand_encode_path: embeddingbase.pt
-entity_dict_path: pubchem500.jsonl
+entity_dict_path: pubchem5000_trim3781.jsonl
 
 #model_spec
 encode_batch_size: 8
