160-dev-rxn-opt-goal-agent: [chemistry_and_robots util] released chemistry_and_robots util version 1.1.0; updated requirements of all other agents.

--- a/Agents/HPLCPostProAgent/requirements.txt
+++ b/Agents/HPLCPostProAgent/requirements.txt
@@ -3,8 +3,7 @@
 #######################################
 pyderivationagent==1.1.0
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
-git+https://github.com/cambridge-cares/TheWorldAvatar@160-dev-rxn-opt-goal-agent#subdirectory=Agents/utils/chemistry_and_robots
-# chemistry_and_robots==1.0.0 # TODO update the version number after the new release
+chemistry_and_robots==1.1.0
 
 ##########################
 ## Third-party packages ##
