--- a/Agents/utils/chemistry_and_robots/MANIFEST.in
+++ b/Agents/utils/chemistry_and_robots/MANIFEST.in
@@ -1,3 +1,7 @@
 recursive-include chemistry_and_robots *.ttl
 include chemistry_and_robots/resources/sample_data/raw_hplc_report_txt.txt
+include chemistry_and_robots/resources/sample_data/raw_hplc_report_txt_incomplete.txt
+include chemistry_and_robots/resources/sample_data/raw_hplc_report_txt_unidentified_peaks.txt
 include chemistry_and_robots/resources/sample_data/raw_hplc_report_xls.xls
+include chemistry_and_robots/resources/sample_data/raw_hplc_report_xls_incomplete.xls
+include chemistry_and_robots/resources/sample_data/raw_hplc_report_xls_unidentified_peaks.xls
