--- a/Agents/EnergyPerformanceCertificateAgent/docker-compose.yml
+++ b/Agents/EnergyPerformanceCertificateAgent/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - DATABASE=postgres
       - GEOSERVER_WORKSPACE=buildings
       - ONTOP_FILE=/app/resources/ontop.obda
+      - OCGML_ENDPOINT=http://localhost:9999/blazegraph/namespace/kings-lynn/sparql
     ports:
       - "5000:5000"
     volumes:
