--- a/web/digital-twin-vis-framework/example-cesium-vis/docker/docker-compose.yml
+++ b/web/digital-twin-vis-framework/example-cesium-vis/docker/docker-compose.yml
@@ -4,16 +4,16 @@ version: "3.8"
 services:
 
   # Example DTVF implementation
-  example-dt-vis:
-    image: example-visualisation:latest
-    container_name: "example-visualisation"
+  example-cesium-vis:
+    image: example-cesium-vis:latest
+    container_name: "example-cesium-vis"
     restart: "no"
     build:
       context: "../"
       dockerfile: "./docker/Dockerfile"
       labels:
         authors: "support@cmclinnovations"
-        description: "Example implementation of the Digital Twin Visualisation Framework."
+        description: "Example implementation of the Digital Twin Visualisation Framework (Cesium)."
     ports:
       - "80:80"
  
