--- a/Agents/RxnOptGoalAgent/requirements.txt
+++ b/Agents/RxnOptGoalAgent/requirements.txt
@@ -11,6 +11,7 @@ chemistry_and_robots==1.1.0
 pandas==1.3.5
 pydantic==1.9.0
 xlwt==1.3.0
+matplotlib==3.5.3
 testcontainers==3.4.2
 pytest==6.2.5
 pytest-docker-compose==3.2.1
