--- a/Deploy/stacks/psdt/vis-cesium/docker/docker-compose.yml
+++ b/Deploy/stacks/psdt/vis-cesium/docker/docker-compose.yml
@@ -3,17 +3,17 @@ version: "3.8"
 # All Services
 services:
 
-  # Example DTVF implementation
-  example-cesium-vis:
-    image: example-cesium-vis:latest
-    container_name: "example-cesium-vis"
+  # Pirmasens Digital Twin visualisation
+  psdt-visualisation-cesium:
+    image: psdt-visualisation-cesium:latest
+    container_name: "psdt-visualisation-cesium"
     restart: "no"
     build:
       context: "../"
       dockerfile: "./docker/Dockerfile"
       labels:
         authors: "support@cmclinnovations"
-        description: "Example implementation of the Digital Twin Visualisation Framework (Cesium)."
+        description: "Pirmasens Digitaler Zwilling Cesium-Visualisierung."
     ports:
-      - "80:80"
+      - "42070:80"
  
