--- a/JPS_ACCESS_AGENT/access-agent-dev-stack/docker-compose.yml
+++ b/JPS_ACCESS_AGENT/access-agent-dev-stack/docker-compose.yml
@@ -4,10 +4,11 @@ services:
   # access-agent
   access-agent:
     image: ghcr.io/cambridge-cares/access-agent:1.4.0
-    container_name: access-agent
+    container_name: access-agent-SNAPSHOT
     environment:
         LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
         STOREROUTER_ENDPOINT: "http://blazegraph-access-agent:8080/blazegraph/namespace/kb/sparql"
+        RDB_STOREROUTER_ENDPOINT: "http://host.docker.internal:9999/blazegraph/namespace/ontordbrouter/sparql"
     pull_policy: if_not_present
     ports:
       - 48888:8080
