1417-dev-rdbstorerouter: removed SNAPSHOT from container name

--- a/JPS_ACCESS_AGENT/access-agent-dev-stack/docker-compose.yml
+++ b/JPS_ACCESS_AGENT/access-agent-dev-stack/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # access-agent
   access-agent:
     image: ghcr.io/cambridge-cares/access-agent:1.4.0
-    container_name: access-agent-SNAPSHOT
+    container_name: access-agent
     environment:
         LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
         STOREROUTER_ENDPOINT: "http://blazegraph-access-agent:8080/blazegraph/namespace/kb/sparql"
