272-ability-to-upload-triples-through-the-stack-data-uploader: Increased the maximum request body size to 10GB to reduce the occurence of 413 (Request Entity Too Large) errors.

--- a/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/stack/services/nginx/configs/default_locations.conf
+++ b/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/stack/services/nginx/configs/default_locations.conf
@@ -26,4 +26,6 @@ location  {
     proxy_send_timeout     60s;
     proxy_read_timeout     60s;
     send_timeout           60s;
+    # Increase max upload size
+    client_max_body_size   10G;
 }
