272-ability-to-upload-triples-through-the-stack-data-uploader: Added a BlazegraphClient and a DataSubset class for uploading triples from files. The former required adding the jps-base-lib as a dependency.

--- a/Deploy/stacks/dynamic/stack-clients/pom.xml
+++ b/Deploy/stacks/dynamic/stack-clients/pom.xml
@@ -39,6 +39,13 @@
   </repositories>
 
   <dependencies>
+
+    <dependency>
+      <groupId>uk.ac.cam.cares.jps</groupId>
+      <artifactId>jps-base-lib</artifactId>
+      <version>1.16.0-272-SNAPSHOT</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java -->
     <dependency>
       <groupId>com.github.docker-java</groupId>
