--- a/Deploy/stacks/dynamic/stack-data-uploader/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-data-uploader/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   stack-data-uploader:
     image: docker.cmclinnovations.com/stack-data-uploader:1.6.0-272-SNAPSHOT
     configs:
+      - blazegraph
       - postgis
       - geoserver
     secrets:
