--- a/Agents/DerivationAsynExample/DerivationAsynExample/pom.xml
+++ b/Agents/DerivationAsynExample/DerivationAsynExample/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         
         <!-- Version of the JPS Base Library to use -->
-        <jps.base.version>1.16.0-170-dev-async-derivation-queryagain-flag-SNAPSHOT</jps.base.version>
+        <jps.base.version>1.16.1</jps.base.version>
     </properties>
     
     <!-- Parent POM -->
