--- a/JPS_BASE/pom.xml
+++ b/JPS_BASE/pom.xml
@@ -34,6 +34,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<release>8</release>
 				</configuration>
 			</plugin>
 
