--- a/JPS_BIODIESELPLANT/pom.xml
+++ b/JPS_BIODIESELPLANT/pom.xml
@@ -24,10 +24,11 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.7.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+			<release>8</release>
         </configuration>
       </plugin>
       <plugin>
