--- a/JPS_FILE_EDITOR/pom.xml
+++ b/JPS_FILE_EDITOR/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps</groupId>
   <artifactId>JPS_FILE_EDITOR</artifactId>
-	<version>0.1.0-java11-SNAPSHOT</version>
+	<version>0.2.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -34,7 +34,7 @@
 		</dependency>
 	</dependencies>
 	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 </project>
