--- a/core/ogm/pom.xml
+++ b/core/ogm/pom.xml
@@ -16,6 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>8</maven.compiler.release>
 
         <!-- Version of the JPS Base Library to use -->
         <jps.base.version>1.10.1</jps.base.version>
