--- a/ontology-tools/CMCLConversionCheck/pom.xml
+++ b/ontology-tools/CMCLConversionCheck/pom.xml
@@ -56,6 +56,7 @@
                     <arg>-Xlint:all,-options,-path, unchecked</arg>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <release>8</release>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
